--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,18 @@
-<h1>Display your Pirate here</h1>
+<!-- <h1>Display your Pirate here</h1> -->
+<h1>Pirate Info</h1>
+<div class="pirate">
+  <h3>Name: <%= @name %></h3>
+  <h4>Weight: <%= @weight %> pounds</h4>
+  <h4>Height: <%= @height %> inches</h4>
+</div><br>
 
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<!-- <h2>Display your first and second ships here</h2> -->
+<h1>Ships</h1>
+<% Ship.all.each_with_index do |ship, index| %>
+  <div class="ship">
+    <h4>Ship #<%= "#{index + 1}" %><h4>
+    <p>Name: <%= ship.name %></p>
+    <p>Type: <%= ship.type %></p>
+    <p>Booty: <%= ship.booty %></p>
+  </div>
+<% end %>
